--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,14 @@
 # env file
 /.env
 /.env.local
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
+
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
 /.env.test
 
 # Migration
