--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -54,3 +54,6 @@ jobs:
 
       - name: Run PHPStan
         run: vendor/bin/phpstan analyze src/
+
+      - name: Run PHPMD
+        run: vendor/bin/phpmd src/ text cleancode,codesize,controversial,design
