feat: GOTENBERG_URL example

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,7 @@ JWT_SECRET_KEY=
 JWT_PUBLIC_KEY=
 JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
+
+###> gotenberg ###
+GOTENBERG_URL=
+###< gotenberg ###
