--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -18,6 +18,11 @@ framework:
     php_errors:
         log: true
 
+    # Enables the use of the X-Content-Type-Options HTTP header to prevent content type sniffing.
+    http_client:
+        default_options:
+            max_redirects: 7
+
 when@test:
     framework:
         test: true
