--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,18 +4,29 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
+        # Source des utilisateurs (par exemple, une entité de base de données)
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: email
+                property: email # Le champ de l'entité utilisé pour l'authentification
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        # Configurer le pare-feu pour utiliser le formulaire de connexion
         main:
             lazy: true
-            provider: app_user_provider
+            form_login:
+                login_path: app_login # La route vers laquelle rediriger pour la connexion
+                check_path: app_login # La route qui valide les informations de connexion
+                default_target_path: / # La route vers laquelle rediriger après la connexion réussie
+                enable_csrf: true
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -26,6 +37,14 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/, roles: PUBLIC_ACCESS }
+        - { path: ^/login, roles: PUBLIC_ACCESS },
+        - { path: ^/register, roles: PUBLIC_ACCESS }
+        - { path: ^/verify/email, roles: PUBLIC_ACCESS }
+        - { path: ^/pdf/generate, roles: ROLE_USER }
+        - { path: ^/pdf/download, roles: ROLE_USER }
+        - { path: ^/history, roles: ROLE_USER }
+        - { path: ^/subscription/change, roles: ROLE_USER }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
