--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Run PHP_CodeSniffer
         run: vendor/bin/phpcs --standard=PSR1 src/
 
-      - name: Run PHPStan
-        run: vendor/bin/phpstan analyze src/
+#      - name: Run PHPStan
+#        run: vendor/bin/phpstan analyze src/
 
-      - name: Run PHPMD
-        run: vendor/bin/phpmd src/ text cleancode,codesize,controversial,design
+#      - name: Run PHPMD
+#        run: vendor/bin/phpmd src/ text cleancode,codesize,controversial,design
