--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -35,6 +35,10 @@ jobs:
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
+    - name: Create directory
+      run: mkdir public/pdf
+    - name: CHMOD directory
+      run: chmod 777 public/pdf
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Create Database
