--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -37,6 +37,8 @@ jobs:
             ${{ runner.os }}-php-
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      - name: list directories
+        run: ls
       - name: Create directory
         run: mkdir public/pdf
       - name: CHMOD directory
