--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -43,6 +43,8 @@ jobs:
         run: mkdir public/pdf
       - name: CHMOD directory
         run: chmod 777 public/pdf
+      - name: list public directory
+        run: ls -lisa public/
       - name: Create Database
         run: |
           mkdir -p data
