--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    pdf_directory: '%kernel.project_dir%/public/pdf' # Définir un paramètre pour le répertoire PDF
+    gotenberg_url: 'http://gotenberg'
 
 services:
     # default configuration for services in *this* file
